<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_text_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterDetails"
            android:textColor="#FF050D"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/new_edit_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="18"
            android:hint="@string/name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/new_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/age"
            android:inputType="number" />


        <EditText
            android:id="@+id/new_edit_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/number_phone"
            android:inputType="phone" />


        <EditText
            android:id="@+id/new_edit_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/new_edit_text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/date"
            android:inputType="date" />


        <EditText
            android:id="@+id/new_edit_text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp" />

    </LinearLayout>

</ScrollView>