<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#0037FF"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/helloWorld"
        android:textColor="#F10606"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_text_equal1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/number"/>

    <EditText
        android:id="@+id/edit_text_equal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/number"/>

    <Button
        android:id="@+id/button_for_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Equality" />

    <TextView
        android:id="@+id/text_view_for_equals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/answer"
        android:textColor="#278E2B"
        android:textSize="25sp" />

    <Switch
        android:id="@+id/name_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textColor="#4A3177"
        android:textSize="25sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/text_view_for_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text=""
        android:textColor="#CDDC39"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/name_chek_box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/yes"
        android:textColor="#9C27B0"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/name_chek_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/no"
        android:textColor="#FFC107"
        android:textSize="15sp" />

    <ToggleButton
        android:id="@+id/name_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:textColor="#F13E06"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_view_for_toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#80364F"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>